# smoke-metal-skin-cse457

./: .gitignore  .gitmodules  BSSRDFRayTracer.cs  CMakeLists.txt  README.md  image.ppm  main.cpp  notes.txt
Group K Scenes/: Volumetrics.unity
GroupK/: Alloy.mat  Cloud.mat  Marble.mat
src/: camera.cpp  camera.hpp  colour.cpp  colour.hpp  constant_medium.cpp  constant_medium.h  constant_medium.hpp  cube.cpp  cube.hpp  cuda.cu  cuda.hpp  hitable.hpp  hitable_list.cpp  hitable_list.hpp  hittable.hpp  hittable_list.cpp  hittable_list.hpp  material.cpp  material.hpp  png.cpp  png.hpp  ray.cpp  ray.hpp  render.cpp  render.hpp  rotate.cpp  rotate.hpp  sphere.cpp  sphere.hpp  texture.cpp  texture.hpp  translate.cpp  translate.hpp  tri.cpp  tri.hpp  util.cpp  util.hpp  utl.hpp  vec3.cpp  vec3.hpp  (+8 more)
src/gpu/: cuda.cu  cuda.hpp  gpu_camera.cu  gpu_camera.cuh  gpu_camera.hpp  gpu_constant_medium.cu  gpu_constant_medium.cuh  gpu_hitable.cuh  gpu_hitable.hpp  gpu_hitable_list.cu  gpu_hitable_list.cuh  gpu_hitable_list.hpp  gpu_material.cu  gpu_material.cuh  gpu_material.hpp  gpu_ray.cu  gpu_ray.cuh  gpu_ray.hpp  gpu_render.cu  gpu_render.cuh  gpu_render.hpp  gpu_sphere.cpp  gpu_sphere.cu  gpu_sphere.cuh  gpu_sphere.hpp  gpu_util.cpp  gpu_util.cu  gpu_util.cuh  gpu_util.hpp  gpu_vec3.cpp  gpu_vec3.cu  gpu_vec3.cuh  gpu_vec3.hpp
src/gpu/optix/: optix_geometry.cu  optix_geometry.cuh  optix_host.cpp  optix_host.hpp  optix_materials.cu  optix_materials.cuh  optix_render.cu  optix_render.cuh  optix_util.cu  optix_util.cuh  tiny_obj_loader.hpp
